syntax = "proto3";
option go_package = "../service";
package service;

// gRPC service
service User {
    rpc UserRegister (tiktok_user_register_request) returns (tiktok_user_register_response);
    rpc UserLogin (tiktok_user_login_request) returns (tiktok_user_login_response);
    rpc UserInfo (tiktok_user_request) returns (tiktok_user_response);
}

// register POST
message tiktok_user_register_request {
    string username = 1; // 注册用户名，最长32个字符
    string password = 2; // 密码，最长32个字符
}

message tiktok_user_register_response {
    int32 status_code = 1; // 状态码，0-成功，其他值-失败
    string status_msg = 2; // 返回状态描述
    int64 user_id = 3; // 用户id
    string token = 4; // 用户鉴权token
}

// login POST
message tiktok_user_login_request {
    string username = 1; // 登录用户名
    string password = 2; // 登录密码
}

message tiktok_user_login_response {
    int32 status_code = 1; // 状态码，0-成功，其他值-失败
    string status_msg = 2; // 返回状态描述
    int64 user_id = 3; // 用户id
    string token = 4; // 用户鉴权token
}

// user infomation 
message tiktok_user_request {
    int64 user_id = 1; // 用户id
    string token = 2; // 用户鉴权token
}
  
message tiktok_user_response {
    int32 status_code = 1; // 状态码，0-成功，其他值-失败
    string status_msg = 2; // 返回状态描述
    UserProto user = 3; // 用户信息
}
  
message UserProto {
    int64 id = 1; // 用户id
    string name = 2; // 用户名称
    int64 follow_count = 3; // 关注总数
    int64 follower_count = 4; // 粉丝总数
    bool is_follow = 5; // true-已关注，false-未关注
    string avatar = 6; //用户头像
    string background_image = 7; //用户个人页顶部大图
    string signature = 8; //个人简介
    int64 total_favorited = 9; //获赞数量
    int64 work_count = 10; //作品数量
    int64 favorite_count = 11; //点赞数量
}

// gRPC server